--- a/apps/docmaker/templates/latex/lb.tex
+++ b/apps/docmaker/templates/latex/lb.tex
@@ -5,7 +5,7 @@
 \usepackage{p200}
 \usepackage[colorlinks=true,linkcolor=blue]{hyperref}
 
-\hypersetup{pdftitle = {{ '{' }}{{ classroom.title }} {{ document_label }}{ '}' }} }
+\hypersetup{pdftitle = {{ '{' }}{{ classroom.title }} {{ docmaker.label }}{ '}' }} }
 \hypersetup{pdfauthor = {{ '{' }}{{ classroom.instructor.name }}{{ '}' }}, pdfsubject = {Physics} }
 
 \pagestyle{plain}
