Fixed .gitignore to keep static folder

--- a/apps/docmaker/_/latex/temp.tex
+++ b/apps/docmaker/_/latex/temp.tex
@@ -18,7 +18,7 @@
 {\large The microscopic source of force}
 
 \vskip 0.25cm
-\includegraphics[width=\textwidth]{/home/dave/Repos/github/spot/content/banners/203.jpg}
+\includegraphics[width=\textwidth]{c:/Users/Dave/Desktop/repos/github/spot/content/banners/203.jpg}
 
 \vskip 0.25cm
 {\large Summer 2013}
