--- a/apps/docmaker/_/latex/temp.tex
+++ b/apps/docmaker/_/latex/temp.tex
@@ -109,7 +109,29 @@ Lab & 25\% \\
 
 \end{center}
 
+\subsection{Weekly Quizzes%
+  \label{weekly-quizzes}%
+}
 
+I will assign weekly homework assignments but I will not grade them. However, the quiz problems will be similar to these problems so it is in your best interest to do them when assigned. These assignments are available on the website. The answers and some of my solutions are also available. Use these materials as you see fit.
+
+The first half-hour of each Monday will be used for a short quiz. Although these problems may be taken from sources other than the homework, they will be comparable to them both in terms of content and difficulty level. These quizzes will be \emph{open} book.
+
+
+\subsection{Lab Participation%
+  \label{lab-participation}%
+}
+
+The lab worksheets are available on the website. Please bring your own copy to work with. You will be required to record your data and observations, answer the questions, and return them to me before you leave. There will be no take-home work required with the labs. Only those present will receive credit for participating. There will be no make-up labs, but I will allow you to drop one as necessary. You will not be allowed to make up work by attending other physics classes.
+
+I do have one pet-peeve regarding these labs. ``Human error'' is not another way of saying ``I have no clue''. When I ask for ``sources of error'', reinterpret that to say ``if you had to do this again, what would you do to improve the experiment?''
+
+
+\subsection{Midterm Exams%
+  \label{midterm-exams}%
+}
+
+See the class schedule for the date of these exams. The questions will be primarily taken from the previously assigned homework assignments and quizzes. The exams will be \emph{closed} book. You will be allowed to bring at most one 8.5'' by 11'' page of handwritten notes. If you need help remembering an equation or the value of some constant during the exam, I will certainly be willing to tell you---please don't hesitate to ask. You will be given the entire three hour period.
 
 \clearpage
 
